<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="name.mukul.statisticscalculator.MainStatsCalcActivity">

    <item android:id="@+id/action_share" android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_preference" android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/preference" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_history" android:title="@string/prevResults"
        app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/about_dialog"
        app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/help"
        app:showAsAction="never" />
    <item android:id="@+id/action_tAndC" android:title="@string/tAndC"
        app:showAsAction="never" />
    <item android:id="@+id/feedback" android:title="@string/feedback"
        app:showAsAction="never" />
</menu>
